crates/agentprof-adapters/tests/snapshots/analyzer_on_fixtures__analysis__with-mode-transitions.snap
---
source: crates/agentprof-adapters/tests/analyzer_on_fixtures.rs
expression: report
---
{
  "meta": {
    "id": "00000000-0000-0000-0000-000000000009",
    "agent": "copilot",
    "producer": "copilot-agent",
    "agent_version": "1.0.54",
    "started_at": "2026-05-26T17:00:00Z",
    "cwd": "/tmp/agentprof-fixture/with-mode-transitions",
    "is_live": false
  },
  "turn_summary": [
    {
      "turn_id": "00000000-0000-0000-0000-000000000223",
      "started_at": "2026-05-26T17:00:03Z",
      "duration": 2000,
      "status": "Completed",
      "model": "gpt-5-mini",
      "mode": "Plan",
      "output_tokens": 12,
      "tool_call_count": 0,
      "hook_call_count": 0,
      "skill_call_count": 0
    },
    {
      "turn_id": "00000000-0000-0000-0000-000000000227",
      "started_at": "2026-05-26T17:00:07Z",
      "duration": 2000,
      "status": "Completed",
      "model": "gpt-5-mini",
      "mode": "Autopilot",
      "output_tokens": 10,
      "tool_call_count": 0,
      "hook_call_count": 0,
      "skill_call_count": 0
    }
  ],
  "tool_rank": [],
  "hook_rank": [],
  "warnings": []
}
